Wrap long lines in <pre> tags: should help scrolly issue.

--- a/app/assets/stylesheets/reader.css.scss
+++ b/app/assets/stylesheets/reader.css.scss
@@ -865,3 +865,11 @@ ol#add-subscriptions li {
 	border: 1px solid #eee;
 	margin-top: 10px;
 }
+
+#entries pre {
+ white-space: pre-wrap;       /* css-3 */
+ white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+ white-space: -pre-wrap;      /* Opera 4-6 */
+ white-space: -o-pre-wrap;    /* Opera 7 */
+ word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
